--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,11 @@ highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
-baseurl:          /
+title:            SKills to Career with Interests and Values Ontology
+url:               https://nehakeshan.github.io/
+baseurl:          https://nehakeshan.github.io/test/
 
 author:
   name:           'Mark Otto'
@@ -23,4 +20,4 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://nehakeshan.github.io/test/
